--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
 @layer components {
   body {
     @apply w-screen overflow-x-hidden bg-bgblue text-text;
