--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 
 @layer components {
   .button {
-    @apply hover:bg-blue-600 px-8 py-3 mr-4 font-bold text-white transition duration-300 bg-blue-500 rounded-lg shadow;
+    @apply hover:bg-blue-600 px-8 py-3 mr-4 font-semibold font-bold text-white transition duration-300 bg-blue-500 rounded-lg shadow;
   }
 }
 
