--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,14 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
 
-@layer components {
-  .button {
-    @apply hover:bg-blue-600 px-8 py-3 mr-4 font-bold text-white transition duration-300 bg-blue-500 rounded-lg shadow;
-  }
+.gradient {
+  background: radial-gradient(
+    at right center,
+    rgb(56, 189, 248),
+    rgb(49, 46, 129)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .heading {
