--- a/app/core/styles/index.css
+++ b/app/core/styles/index.css
@@ -88,7 +88,8 @@ a {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px, rgba(0, 0, 0, 0.1) 0px 0px 2px 0px;
 }
 
-.dropdown a, .dropdown .dd-div {
+.dropdown a,
+.dropdown .dd-div {
   @apply py-2 w-[24ch] pl-8 hover:bg-gray-200 flex items-center gap-2;
 }
 
@@ -107,7 +108,6 @@ a {
 
 .icon {
   border-radius: 0 0.6rem 0.6rem 0;
-
 }
 
 @tailwind utilities;
