--- a/app/core/styles/index.css
+++ b/app/core/styles/index.css
@@ -93,6 +93,10 @@ a {
   @apply py-2 w-[24ch] pl-8 hover:bg-gray-200 flex items-center gap-2;
 }
 
+.dd {
+  pointer-events: all;
+}
+
 .search {
   background-color: rgba(0, 0, 0, 0.1);
   border: 1px solid transparent;
@@ -108,6 +112,12 @@ a {
 
 .icon {
   border-radius: 0 0.6rem 0.6rem 0;
+}
+
+.profile {
+  width: calc(100% - 40px);
+  margin: 0 auto 30px;
+  max-width: 935px;
 }
 
 @tailwind utilities;
