feat(formatting): show line breaks

--- a/app/core/styles/index.css
+++ b/app/core/styles/index.css
@@ -21,6 +21,10 @@ h6 {
   font-family: "Lato", sans-serif;
 }
 
+.long-text {
+  white-space: pre-wrap;
+}
+
 @layer components {
   .hero {
     @apply w-full text-[#333];
